# buddy

./: Cargo.toml  README.md  g.md
.github/workflows/: rust-ci-release.yml
src/: analyzer.rs  lib.rs  llm.rs  main.rs  parser.rs  report.rs
src/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/rules/: architecture.rs  config.rs  dependency_injection.rs  design_patterns.rs  dry.rs  error_handling.rs  mod.rs  naming.rs  security.rs  tech_stack.rs  testing.rs
