[package]
name = "buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.24"
regex = "1.11"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
anyhow = "1.0"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
streaming-iterator = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
